# HodoSim

./: .gitignore  CMakeLists.txt  README.MD  config.yaml  main.cc
PlotPredict/: CMakeLists.txt  main.cc
include/: DetectorConstruction.hh  EventAction.hh  OpticalPhotonHit.hh  RunAction.hh
macros/: _plot.mac  batch.mac  build_custom_gui.mac  init.mac  paint_geometry.mac  vis.mac
macros/extra/: calibration.mac
src/: DetectorConstruction.cc  EventAction.cc  OpticalPhotonHit.cc  RunAction.cc  SiliconPMSD.cc
